# file-browser

./: .gitignore  Cargo.toml  TAGS  settings.json  styles.toml
src/: color_pair.rs  colors.rs  dir_view.rs  directory_view.rs  entry.rs  file_type.rs  macros.rs  main.rs  main_view.rs  metadata.rs  palette.rs  pallete.rs  settings.rs  size.rs  split_view.rs  tab_view.rs  view_ratio.rs
