[package]
name = "file_browser"
version = "0.1.0"
authors = ["Daniel Akhterov <akhterovd@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.3"
cursive = { git = "https://github.com/danielakhterov/Cursive" }
config = "0.9.2"
number_prefix = "0.2.8"
parking_lot = "0.7.1"
lazy_static = "1.2.0"
tokio-fs = "0.1.5"
futures = "0.1.25"
tokio = "0.1.14"
